css flicker solved

--- a/client/src/components/components.module.css
+++ b/client/src/components/components.module.css
@@ -332,7 +332,7 @@ background-size: cover;
 
     }
     .feels{
-        margin-right: 10rem;
+        margin-right: 2rem;
     }
     .bottom-sub-2{
         height: 100%;
